--- a/frontend-absensi-gym/angular.json
+++ b/frontend-absensi-gym/angular.json
@@ -22,6 +22,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/assets",
+              "src/assets/_redirects",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -81,6 +82,8 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
+              "src/assets",
+              "src/assets/_redirects",
               {
                 "glob": "**/*",
                 "input": "public"
