--- a/frontend-absensi-gym/angular.json
+++ b/frontend-absensi-gym/angular.json
@@ -33,6 +33,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/swiper/swiper-bundle.css",
               "src/styles.css"
             ],
             "scripts": [
@@ -98,6 +99,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/swiper/swiper-bundle.css",
               "src/styles.css"
             ],
             "scripts": [
