--- a/frontend-absensi-gym/package.json
+++ b/frontend-absensi-gym/package.json
@@ -20,6 +20,11 @@
     "@angular/router": "^18.2.0",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
+    "datatables.net": "^2.3.3",
+    "datatables.net-bs5": "^2.3.3",
+    "datatables.net-dt": "^2.3.3",
+    "datatables.net-responsive-bs5": "^3.0.6",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.2",
     "swiper": "^11.2.10",
