--- a/frontend-absensi-gym/angular.json
+++ b/frontend-absensi-gym/angular.json
@@ -32,6 +32,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/swiper/swiper-bundle.css",
               "node_modules/datatables.net-dt/css/dataTables.dataTables.css",
@@ -103,6 +104,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/swiper/swiper-bundle.css",
               "node_modules/datatables.net-dt/css/dataTables.dataTables.css",
